--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pyyaml (>=6.0.3,<7.0.0)",
-    "pydantic (>=2.12.5,<3.0.0)"
+    "pydantic (>=2.12.5,<3.0.0)",
+    "pandas (>=2.3.3,<3.0.0)",
+    "sqlalchemy (>=2.0.45,<3.0.0)",
+    "psycopg2 (>=2.9.11,<3.0.0)"
 ]
 
 [tool.poetry]
