--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "pydantic (>=2.12.5,<3.0.0)",
     "pandas (>=2.3.3,<3.0.0)",
     "sqlalchemy (>=2.0.45,<3.0.0)",
-    "psycopg2 (>=2.9.11,<3.0.0)"
+    "psycopg2 (>=2.9.11,<3.0.0)",
+    "geopandas (>=1.1.2,<2.0.0)",
+    "geoalchemy2 (>=0.18.1,<0.19.0)"
 ]
 
 [tool.poetry]
