feat(load_data): add loading FIX/Reporting Point/Waypoinnt (FIX)

--- a/load_nasr_data/config_sample.yaml
+++ b/load_nasr_data/config_sample.yaml
@@ -31,6 +31,24 @@ dict_tables:
 #      - col1: "value_col1_row2"
 #        col2: "value_col2_row2"
 #        col3: "value_col3_row2"
+  - name: "fix_use_code"
+    data:
+      - code: "CN"
+        desc: "COMPUTER NAVIGATION FIX"
+      - code: "MR"
+        desc: "MILITARY REPORTING POINT"
+      - code: "MW"
+        desc: "MILITARY WAYPOINT"
+      - code: "NRS"
+        desc: "NRS WAYPOINT"
+      - code: "RADAR"
+        desc: "RADAR"
+      - code: "RP"
+        desc: "REPORTING POINT"
+      - code: "VFR"
+        desc: "VFR WAYPOINT"
+      - code: "WP"
+        desc: "WAYPOINT"
 data_tables:
 # Definition of 'data' tables -
 #  - file_name: "file1.csv"
@@ -40,3 +58,37 @@ data_tables:
 #      - "COL1"
 #      - "COL2"
 #      - "COL3"
+  - file_name: "FIX_BASE.csv"
+    table_name: "fix"
+    is_spatial: true
+    columns:
+      - "FIX_ID"
+      - "ICAO_REGION_CODE"
+      - "STATE_CODE"
+      - "COUNTRY_CODE"
+      - "LAT_DECIMAL"
+      - "LONG_DECIMAL"
+      - "FIX_ID_OLD"
+      - "CHARTING_REMARK"
+      - "FIX_USE_CODE"
+      - "ARTCC_ID_HIGH"
+      - "ARTCC_ID_LOW"
+      - "PITCH_FLAG"
+      - "CATCH_FLAG"
+      - "SUA_ATCAA_FLAG"
+      - "MIN_RECEP_ALT"
+      - "COMPULSORY"
+  - file_name: "FIX_CHRT.csv"
+    table_name: "fix_chrt"
+    is_spatial: false
+    columns:
+      - "FIX_ID"
+      - "CHARTING_TYPE_DESC"
+  - file_name: "FIX_NAV.csv"
+    table_name: "fix_nav"
+    is_spatial: false
+    columns:
+      - "FIX_ID"
+      - "NAV_ID"
+      - "BEARING"
+      - "DISTANCE"
