feat(load_data): add loading Weather Reporting Locations (WXL)

--- a/load_nasr_data/config_sample.yaml
+++ b/load_nasr_data/config_sample.yaml
@@ -65,6 +65,60 @@ dict_tables:
         desc: "SECONDARY RADAR"
       - code: "BCN"
         desc: "BEACON RADAR"
+  - name: "wxl_survey_method"
+    data:
+      - code: "S"
+        desc: "VALUE WAS SURVEYED"
+      - code: "E"
+        desc: "VALUE WAS ESTIMATED"
+  - name: "wxl_wea_svc_type"
+    data:
+      - code: "AC"
+        desc: "SEVERE WEATHER OUTLOOK NARRATIVE"
+      - code: "AWW"
+        desc: "SEVERE WEATHER FORECAST ALERT"
+      - code: "CWA"
+        desc: "CENTRAL WEATHER ADVISORY"
+      - code: "FA"
+        desc: "AREA FORECAST"
+      - code: "FD"
+        desc: "WINDS & TEMPERATURE ALOFT FORECAST"
+      - code: "FT"
+        desc: "AVIATION TERMINAL FORECAST"
+      - code: "FX"
+        desc: "MISCELLANEOUS FORECASTS"
+      - code: "METAR"
+        desc: "AVIATION ROUTINE WEATHER REPORT (ICAO)"
+      - code: "MIS"
+        desc: "METEOROLOGICAL IMPACT SUMMARY"
+      - code: "NOTAM"
+        desc: "NOTICE TO AIRMEN"
+      - code: "SA"
+        desc: "SURFACE OBSERVATION REPORT"
+      - code: "SD"
+        desc: "RADAR WEATHER REPORT"
+      - code: "SPECI"
+        desc: "AVIATION SPECIAL WEATHER REPORT (ICAO)"
+      - code: "SYNS"
+        desc: "TRANSCRIBED WEATHER BROADCAST SYNOPSES"
+      - code: "TAF"
+        desc: "AVIATION TERMINAL FORECAST (ICAO)"
+      - code: "TWEB"
+        desc: "TRANSCRIBED WEATHER BROADCAST"
+      - code: "UA"
+        desc: "AIRCRAFT REPORT (PIREP)"
+      - code: "WA"
+        desc: "WEATHER ADVISORY"
+      - code: "WH"
+        desc: "ABBREVIATED HURRICANE ADVISORY"
+      - code: "WO"
+        desc: "TROPICAL DEPRESSIONS"
+      - code: "WS"
+        desc: "FLIGHT ADVISORY - SIGMET"
+      - code: "WST"
+        desc: "CONVECTIVE SIGMET"
+      - code: "WW"
+        desc: "SEVERE WEATHER BROADCASTS OR BULLETINS"
 data_tables:
 # Definition of 'data' tables -
 #  - file_name: "file1.csv"
@@ -120,3 +174,22 @@ data_tables:
       - "RADAR_NO"
       - "RADAR_HRS"
       - "REMARK"
+  - file_name: "WXL_BASE.csv"
+    table_name: "wxl"
+    is_spatial: true
+    columns:
+      - "WEA_ID"
+      - "CITY"
+      - "STATE_CODE"
+      - "COUNTRY_CODE"
+      - "LAT_DECIMAL"
+      - "LONG_DECIMAL"
+      - "ELEV"
+      - "SURVEY_METHOD_CODE"
+  - file_name: "WXL_SVC.csv"
+    table_name: "wxl_svc"
+    is_spatial: false
+    columns:
+      - "WEA_ID"
+      - "WEA_SVC_TYPE_CODE"
+      - "WEA_AFFECT_AREA"
