--- a/load_nasr_data/config_sample.yaml
+++ b/load_nasr_data/config_sample.yaml
@@ -49,6 +49,91 @@ dict_tables:
         desc: "VFR WAYPOINT"
       - code: "WP"
         desc: "WAYPOINT"
+  # Navigation Aids (NAV)
+  - name: "navaid_type"
+    data:
+      - nav_type: "CONSOLAN"
+        description: "A Low Frequency, Long-Distance NAVAID Used Principally for Transoceanic navigation."
+      - nav_type: "DME"
+        description: "Distance Measuring Equipment only."
+      - nav_type: "FAN MARKER"
+        description: "There are 3 types of EN ROUTE Market Beacons.  FAN MARKER, Low powered FAN MARKERS and Z MARKERS.  A FAN MARKER Is used to provide a positive identification of positions at Definite points along the airways."
+      - nav_type: "MARINE NDB"
+        description: "A NON Directional Beacon used primarily for Marine (surface) Navigation."
+      - nav_type: "MARINE NDB/DME"
+        description: "  A NON Directional Beacon with associated Distance measuring Equipment; used primarily for Marine (surface) Navigation."
+      - nav_type: "NDB"
+        description: "A NON Directional Beacon"
+      - nav_type: "NDB/DME"
+        description: "Non Directional Beacon with associated Distance Measuring Equipment."
+      - nav_type: "TACAN"
+        description: "A Tactical Air Navigation System providing Azimuth and Slant Range Distance."
+      - nav_type: "UHF/NDB"
+        description: "Ultra High Frequency/NON Directional Beacon."
+      - nav_type: "VOR"
+        description: "A VHF OMNI-Directional Range providing Azimuth only."
+      - nav_type: "VORTAC"
+        description: "A Facility consisting of two components, VOR and TACAN, Which provides three individual services: VOR AZIMITH, TACAN AZIMUTH and TACAN Distance (DME) at one site."
+      - nav_type: "VOR/DME"
+        description: "VHF OMNI-DIRECTIONAL Range with associated Distance Measuring equipment."
+      - nav_type: "VOT"
+        description: "A FAA VOR Test Facility."
+  - name: "faa_region_code"
+    data:
+      - region_code: "AAL"
+        description: "ALASKA"
+      - region_code: "ACE"
+        description: "CENTRAL"
+      - region_code: "AEA"
+        description: "EASTERN"
+      - region_code: "AGL"
+        description: "GREAT LAKES"
+      - region_code: "ANE"
+        description: "NEW ENGLAND"
+      - region_code: "ANM"
+        description: "NORTHWEST MOUNTAIN"
+      - region_code: "ASO"
+        description: "SOUTHERN"
+      - region_code: "ASW"
+        description: "SOUTHWEST"
+      - region_code: "AWP"
+        description: "WESTERN-PACIFIC"
+  - name: "survey_accuracy_code"
+    data:
+      - code: "0"
+        description: "UNKNOWN"
+      - code: "1"
+        description: "DEGREE"
+      - code: "2"
+        description: "10 MINUTES"
+      - code: "3"
+        description: "1 MINUTE"
+      - code: "4"
+        description: "10 SECONDS"
+      - code: "5"
+        description: "1 SECOND OR BETTER"
+      - code: "6"
+        description: "NOS"
+      - code: "7"
+        description: "3RD ORDER TRIANGULATION"
+  - name: "monitoring_category"
+    data:
+      - code: "1"
+        description: "Internal Monitoring Plus A Status Indicator Installed At Control Point. (Reverts to a Temporary Category 3 Status When the Control Point is not is Not Manned.)"
+      - code: "2"
+        description: "Internal Monitoring with Status Indicator at Control Point Inoperative but Pilot Reports Indicate facility is operating normally.  (This Is A Temporary Situation That Requires No Procedural Action.)"
+      - code: "3"
+        description: "Internal Monitoring Only. Status Indicator Non installed at control point."
+      - code: "4"
+        description: "Internal Monitor Not Installed. Remote Status indicator provided at control point. This Category Is Applicable Only To Non-Directional Beacons."
+  - name: "air_gnd_code"
+    data:
+      - code: "A"
+        description: "Air"
+      - code: "G"
+        description: "Ground"
+      - code: "G1"
+        description: "Ground One"
   - name: "rdr_type"
     data:
       - code: "ARSR"
@@ -162,6 +247,82 @@ data_tables:
       - "NAV_ID"
       - "BEARING"
       - "DISTANCE"
+  # Navigation Aids (NAV)
+  - file_name: "NAV_BASE.csv"
+    table_name: "navaid"
+    is_spatial: true
+    columns:
+      - "NAV_ID"
+      - "NAV_TYPE"
+      - "COUNTRY_CODE"
+      - "CITY"
+      - "REGION_CODE"
+      - "FAN_MARKER"
+      - "OWNER"
+      - "OPERATOR"
+      - "NAS_USE_FLAG"
+      - "PUBLIC_USE_FLAG"
+      - "NDB_CLASS_CODE"
+      - "OPER_HOURS"
+      - "HIGH_ALT_ARTCC_ID"
+      - "HIGH_ARTCC_NAME"
+      - "LOW_ALT_ARTCC_ID"
+      - "LOW_ARTCC_NAME"
+      - "LAT_DECIMAL"
+      - "LONG_DECIMAL"
+      - "SURVEY_ACCURACY_CODE"
+      - "ELEV"
+      - "MAG_VARN"
+      - "MAG_VARN_HEMIS"
+      - "MAG_VARN_YEAR"
+      - "SIMUL_VOICE_FLAG"
+      - "PWR_OUTPUT"
+      - "AUTO_VOICE_ID_FLAG"
+      - "MNT_CAT_CODE"
+      - "VOICE_CALL"
+      - "CHAN"
+      - "FREQ"
+      - "MKR_IDENT"
+      - "MKR_SHAPE"
+      - "MKR_BRG"
+      - "ALT_CODE"
+      - "LOW_NAV_ON_HIGH_CHART_FLAG"
+      - "Z_MKR_FLAG"
+      - "FSS_ID"
+      - "FSS_NAME"
+      - "FSS_HOURS"
+      - "NOTAM_ID"
+      - "QUAD_IDENT"
+      - "PITCH_FLAG"
+      - "CATCH_FLAG"
+      - "SUA_ATCAA_FLAG"
+      - "RESTRICTION_FLAG"
+      - "HIWAS_FLAG"
+  - file_name: "NAV_CKPT.csv"
+    table_name: "navaid_checkpoint"
+    is_spatial: false
+    columns:
+      - "NAV_ID"
+      - "NAV_TYPE"
+      - "COUNTRY_CODE"
+      - "CITY"
+      - "ALTITUDE"
+      - "BRG"
+      - "AIR_GND_CODE"
+      - "CHK_DESC"
+      - "ARPT_ID"
+  - file_name: "NAV_RMK.csv"
+    table_name: "navaid_remark"
+    is_spatial: false
+    columns:
+      - "NAV_ID"
+      - "NAV_TYPE"
+      - "COUNTRY_CODE"
+      - "CITY"
+      - "TAB_NAME"
+      - "REF_COL_NAME"
+      - "REF_COL_SEQ_NO"
+      - "REMARK"
   - file_name: "RDR.csv"
     table_name: "rdr"
     is_spatial: false
