feat(load_data): add loading ASOS/AOWS

--- a/load_nasr_data/config_sample.yaml
+++ b/load_nasr_data/config_sample.yaml
@@ -213,6 +213,26 @@ data_tables:
 #      - "COL1"
 #      - "COL2"
 #      - "COL3"
+  - file_name: "AWOS.csv"
+    table_name: "awos"
+    is_spatial: true
+    columns:
+      - "ASOS_AWOS_ID"
+      - "ASOS_AWOS_TYPE"
+      - "STATE_CODE"
+      - "CITY"
+      - "COUNTRY_CODE"
+      - "COMMISSIONED_DATE"
+      - "NAVAID_FLAG"
+      - "LAT_DECIMAL"
+      - "LONG_DECIMAL"
+      - "ELEV"
+      - "SURVEY_METHOD_CODE"
+      - "PHONE_NO"
+      - "SECOND_PHONE_NO"
+      - "SITE_NO"
+      - "SITE_TYPE_CODE"
+      - "REMARK"
   - file_name: "FIX_BASE.csv"
     table_name: "fix"
     is_spatial: true
