feat(load_data): add loading Communication Facilities (COM)

--- a/load_nasr_data/config_sample.yaml
+++ b/load_nasr_data/config_sample.yaml
@@ -31,6 +31,14 @@ dict_tables:
 #      - col1: "value_col1_row2"
 #        col2: "value_col2_row2"
 #        col3: "value_col3_row2"
+  - name: "com_status_code"
+    data:
+      - code: "A"
+        description: "Operational IFR"
+      - code: "Q"
+        description: "To be commissioned"
+      - code: "Z"
+        description: "Decommissioned"
   - name: "fix_use_code"
     data:
       - code: "CN"
@@ -245,6 +253,30 @@ data_tables:
       - "SECOND_PHONE_NO"
       - "SITE_NO"
       - "SITE_TYPE_CODE"
+      - "REMARK"
+  # Communication Facilities (COM)
+  - file_name: "COM.csv"
+    table_name: "com"
+    is_spatial: true
+    columns:
+      - "COMM_LOC_ID"
+      - "COMM_TYPE"
+      - "NAV_ID"
+      - "NAV_TYPE"
+      - "CITY"
+      - "STATE_CODE"
+      - "REGION_CODE"
+      - "COUNTRY_CODE"
+      - "COMM_OUTLET_NAME"
+      - "LAT_DECIMAL"
+      - "LONG_DECIMAL"
+      - "FACILITY_ID"
+      - "FACILITY_NAME"
+      - "ALT_FSS_ID"
+      - "ALT_FSS_NAME"
+      - "OPR_HRS"
+      - "COMM_STATUS_CODE"
+      - "COMM_STATUS_DATE"
       - "REMARK"
   - file_name: "FIX_BASE.csv"
     table_name: "fix"
